[tool.poetry]
name = "buildkite-browser"
version = "0.1.0"
description = "A friendly, feature-filled CLI tool for more intuitively interacting with Buildkite during development and deploying"
authors = ["MolarFox <molar@molarfox.io>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
